compiler/tests-spec/testData/psi/templates/identifiers/object.kt
object A : <!ELEMENT!> {}

object B : A<B<<!ELEMENT!>, <!ELEMENT!>>, <!ELEMENT!>> {}

object <!ELEMENT!> constructor() {}

object <!ELEMENT!> : <!ELEMENT!><<!ELEMENT!>> {}
